--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 DBHOST = 'localhost'
 DBUSER = 'root'
-DBPASSWORD = 'root'
+DBPASSWORD = ''
 DBNAME = 'chaos_citadel'
 SECRET = '3^*3##94!c29U&*2$9@6'
