--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "rbdwllr/reallysimplejwt": "^5.0"
     },
     "autoload": {
         "psr-4": {
